--- a/assets/style/estilo01.css
+++ b/assets/style/estilo01.css
@@ -99,7 +99,7 @@ section {
 }
 
 /* Barra de navegación */
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: flex-end;
   align-items: start;
@@ -107,6 +107,18 @@ section {
   margin-right: 1%;
   transform: translatey(20px);
 }
+ */
+
+ nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: start;
+  margin-top: 0%;
+  margin-right: 1%;
+  transform: translatey(1.5rem);
+}
+
+
 
 .nav-enlace {
   padding: 10px 8px;
@@ -195,12 +207,8 @@ dd {
   text-decoration: underline;
 }
 
-.maps {
-  display: flex;
-  flex-direction: row;
-  width: 100vh;
-}
 
+/* Media pantalla chicas */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   header {
     flex-direction: column;
@@ -215,11 +223,14 @@ dd {
     left: 5px;
   }
 
-  .navbar {
+  nav {
     flex-direction: column;
     transform: translateX(0px);
   }
 
+ nav a {
+  width: 6rem;
+ } 
   .nav-enlace {
     padding: 2px 3px;
     border: 1px solid black;
@@ -289,10 +300,21 @@ dd {
     display: flex;
     flex-direction: column;
   }
+
+  .map-container {
+    flex-direction: column;
+  }
   
+ .map h2{
+  width: 20rem;
+ } 
+
 
 }
+/* Fin Media pantalla chicas */
 
+
+/* Para el Formulario */
 .container {
   max-width: 100%;
   padding: 20px;
@@ -402,21 +424,20 @@ select {
 }
 
 
-/* Selector para el input de checkbox */
 input[type="checkbox"] {
-   /* Propiedades de estilo para el input */
 height: 18px;
   }
 
 input[type="checkbox"] + label {
-  /* Propiedades de estilo para el label de checkbox */
 padding-right: 0px;
 padding-left: 12px;
 width: 102px;
 height: 20px;
 }
+/* Fin Formulario */
 
 
+/* Contenedor para los mapas en gameinfo.html */
 .map-container {
   display: flex;
   justify-content: space-between;
@@ -429,3 +450,4 @@ height: 20px;
   padding: 1rem;
   border: 1px solid #ccc;
 }
+/* fin Contenedor para los mapas en gameinfo.html */
