--- a/assets/style/estilo01.css
+++ b/assets/style/estilo01.css
@@ -98,17 +98,6 @@ section {
   height: 50%;
 }
 
-/* Barra de navegación */
-/* .navbar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: start;
-  margin-top: 0%;
-  margin-right: 1%;
-  transform: translatey(20px);
-}
- */
-
  nav {
   display: flex;
   justify-content: flex-end;
@@ -118,6 +107,9 @@ section {
   transform: translatey(1.5rem);
 }
 
+nav a{
+width: 6rem;
+}
 
 
 .nav-enlace {
@@ -289,13 +281,13 @@ dd {
     height: 20px;
   }
 
-  .input-wrapper {
+  .input-form {
     display: flex;
     flex-direction: column;
     margin-bottom: 0.1rem;
     padding: 0.4rem;
   }
-  
+
   .bloquecito {
     display: flex;
     flex-direction: column;
@@ -333,7 +325,7 @@ form {
   width: 90%;
 }
 
-.input-wrapper {
+.input-form {
   display: flex;
   flex-direction: row;
   margin-bottom: 1px;
