--- a/assets/style/estilo01.css
+++ b/assets/style/estilo01.css
@@ -201,7 +201,9 @@ dd {
 
 
 /* Media pantalla chicas */
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+/*@media only screen and (min-width: 320px) and (max-width: 767px) {*/
+@media only screen and (min-width: 320px) and (max-width: 1023px) {
+
   header {
     flex-direction: column;
   }
@@ -218,6 +220,8 @@ dd {
   nav {
     flex-direction: column;
     transform: translateX(0px);
+    width: 100%;
+    align-items: center;
   }
 
  nav a {
@@ -226,7 +230,7 @@ dd {
   .nav-enlace {
     padding: 2px 3px;
     border: 1px solid black;
-    font-size: 7px;
+    font-size: 1rem;
     margin: 1px;
   }
 
@@ -253,7 +257,12 @@ dd {
   }
 
   .seccion {
-    width: 70%;
+    width: 85%;
+  }
+
+  section {
+    padding-left:2.5rem;
+    padding-right:0.2rem;
   }
 
   footer {
@@ -286,11 +295,13 @@ dd {
     flex-direction: column;
     margin-bottom: 0.1rem;
     padding: 0.4rem;
+    flex-wrap: wrap;
   }
 
   .bloquecito {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .map-container {
@@ -300,7 +311,6 @@ dd {
  .map h2{
   width: 20rem;
  } 
-
 
 }
 /* Fin Media pantalla chicas */
@@ -330,6 +340,7 @@ form {
   flex-direction: row;
   margin-bottom: 1px;
   padding: 0.4rem;
+  flex-wrap: wrap;
 }
 
 .required {
@@ -385,8 +396,8 @@ label {
 }
 
 input[type="text"] {
-  height: 2.5rem;
-  padding: 1rem;
+  height: 2.0rem;
+  padding: 0.5rem;
   margin-bottom: 1.5rem;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
@@ -413,6 +424,7 @@ select {
 .bloquecito {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 
